Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17841 S3 Storage engine
  3. MDEV-19464

Altering partitioned table into S3 causes an obscure error

    XMLWordPrintable

Details

    Description

      a9499a38

      MariaDB [elenst]> create table t1 (a int) partition by hash(a);
      Query OK, 0 rows affected (0.477 sec)
       
      MariaDB [elenst]> alter table t1 engine=S3;
      ERROR 155 (HY000): Table elenst.#sql-45b7_a#P#p0 doesn't exist in s3
      MariaDB [elenst]> show warnings;                   
      +-------+------+--------------------------------------------------------------------------------------------------------------------------+
      | Level | Code | Message                                                                                                                  |
      +-------+------+--------------------------------------------------------------------------------------------------------------------------+
      | Error |  155 | Table elenst.#sql-45b7_a#P#p0 doesn't exist in s3                                                                        |
      | Error | 1025 | Error on rename of './elenst/#sql-45b7_a' to './elenst/t1' (errno: 155 "The table does not exist in the storage engine") |
      +-------+------+--------------------------------------------------------------------------------------------------------------------------+
      2 rows in set (0.000 sec)
      

      Maybe partitioning is not supported for S3, but then it could produce a better message.

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5d 5h 17m
                  5d 5h 17m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.